    * new method: IndexItemsTable.get_iids_with_specific_detail_values, get all iids that have detail_name with specific detail_value
    * refactored CMDObj.do_apropos to use only items_table not install_definitions_index
    * removed CMDObj methods do_listindex, do_common as they did almost the same as do_list, do_depend
    
18/9/2017 1.6.1.0
    user visible changes:
    * new config var INFO_MAP_FILES_URL_PREFIX to better define INFO_MAP_FILE_URL
    * some more progress message during copy snd sync batch file creation
    * utils.read_file_or_url does some caching if given url, local file and checksum
    * utils.read_file_or_url default timeout is now 18.05sec for connection, 120.05dec for the whole download
    * files to download are sorted by size so smaller files will download first and show progress earlier
    * run_parallels: flush stdout after each process in the loop, maybe will give better progress reports

    admin visible changes:
    * info_map files split from the main info_map.txt will be added to the main info_map.txt so size and checksum are known
    * additional info_map files are read during InstlInstanceSync.read_remote_info_map
    * better config var definitions for admin
    * the full info_map.txt is now called full_info_map.txt
    * renewed interactive mode that was neglected where some features did not work, mainly do_depend

    programmer visible changes:
    * install_sources are now duplicated for Mac/Win and initial '/' is removed from common items
    * Removed the AdjustedSources table, it was no longer useful after install_sources is pre-inserted for Mac/Win/common   * YamlReader.read_yaml_file uses new function utils.read_file_or_url
    * SVNTable.read_from_file will not clear the database by calling clear_all() this will allow to read additional info_maps in InstlInstanceSync.read_remote_info_map